--- a/AppHytracked/app/src/main/res/layout/tab_three.xml
+++ b/AppHytracked/app/src/main/res/layout/tab_three.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:baselineAligned="false">
+    android:baselineAligned="false"
+    tools:context=".TabThree">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="0dp"
@@ -83,31 +84,30 @@
 
         <Button
             android:id="@+id/button"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:onClick="submitInfo"
+            android:layout_marginBottom="5dp"
+            android:onClick="submitMain"
             android:text="@string/Sumbit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <EditText
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/nameOutput"
+            android:layout_width="218dp"
+            android:layout_height="44dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="216dp"
-            android:layout_marginEnd="75dp"
-            android:ems="10"
+            android:layout_marginTop="212dp"
+            android:layout_marginEnd="8dp"
             android:fontFamily="sans-serif-smallcaps"
-            android:inputType="textPersonName"
-            android:text="@string/Name"
             android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.913"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
