--- a/AppHytracked/app/src/main/res/layout/tab_three.xml
+++ b/AppHytracked/app/src/main/res/layout/tab_three.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
-    tools:context=".TabThree">
+    tools:context=".TabThree"
+    android:id="@+id/tabthree"
+    android:tag="tab_three">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="0dp"
@@ -81,20 +83,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/josesantos" />
-
-        <Button
-            android:id="@+id/button"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="5dp"
-            android:onClick="submitMain"
-            android:text="@string/Sumbit"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/nameOutput"
