--- a/AppHytracked/app/src/main/res/layout/fragment_tab_three.xml
+++ b/AppHytracked/app/src/main/res/layout/fragment_tab_three.xml
@@ -28,8 +28,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/Weight_input"
+        <TextView
+            android:id="@+id/weight_input"
             android:layout_width="128dp"
             android:layout_height="42dp"
             android:layout_marginStart="8dp"
@@ -39,6 +39,8 @@
             android:fontFamily="sans-serif-smallcaps"
             android:inputType="numberDecimal"
             android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -86,15 +88,15 @@
 
         <TextView
             android:id="@+id/nameOutput"
-            android:layout_width="218dp"
-            android:layout_height="44dp"
+            android:layout_width="369dp"
+            android:layout_height="45dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="212dp"
             android:layout_marginEnd="8dp"
             android:fontFamily="sans-serif-smallcaps"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="18sp"
+            android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
