--- a/AppHytracked/app/src/main/res/layout/fragment_tab_one.xml
+++ b/AppHytracked/app/src/main/res/layout/fragment_tab_one.xml
@@ -49,7 +49,7 @@
             android:layout_height="52dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="264dp"
+            android:layout_marginBottom="152dp"
             android:layout_weight="1"
             android:fontFamily="sans-serif-smallcaps"
             android:text="@string/hydration_level"
@@ -57,7 +57,7 @@
             android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.782"
+            app:layout_constraintHorizontal_bias="0.521"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
@@ -66,7 +66,7 @@
             android:layout_height="85dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="184dp"
+            android:layout_marginBottom="68dp"
             android:layout_weight="1"
             android:fontFamily="monospace"
             android:text="@string/percentage"
@@ -90,6 +90,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/human" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="99dp"
+            android:layout_height="267dp"
+            android:rotation="270"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.866"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.134" />
 
     </android.support.constraint.ConstraintLayout>
 
