--- a/AppHytracked/app/src/main/res/layout/fragment_tab_one.xml
+++ b/AppHytracked/app/src/main/res/layout/fragment_tab_one.xml
@@ -79,30 +79,40 @@
             app:layout_constraintHorizontal_bias="0.514"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="176dp"
-            android:layout_height="269dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/human" />
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="99dp"
-            android:layout_height="267dp"
-            android:rotation="270"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="290dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.866"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.134" />
+            app:layout_constraintVertical_bias="0.041">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="233dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="70dp"
+                app:srcCompat="@drawable/human" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="120dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginBottom="8dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:minWidth="900dp"
+                android:progress="25"
+                android:rotation="270" />
+
+        </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
 
