--- a/AppHytracked/app/src/main/res/layout/fragment_tab_one.xml
+++ b/AppHytracked/app/src/main/res/layout/fragment_tab_one.xml
@@ -23,31 +23,40 @@
             android:id="@+id/goal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="452dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="8dp"
             android:fontFamily="sans-serif-smallcaps"
             android:text="@string/goal_2l"
             android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/Litres"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/Litres"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
             android:layout_marginTop="452dp"
+            android:layout_marginBottom="8dp"
             android:fontFamily="sans-serif-smallcaps"
             android:text="@string/litres_750l"
             android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.555" />
 
         <TextView
             android:id="@+id/hydration_level"
             android:layout_width="345dp"
             android:layout_height="52dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="152dp"
             android:layout_weight="1"
@@ -58,13 +67,15 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.521"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
         <TextView
             android:id="@+id/percentage"
             android:layout_width="333dp"
-            android:layout_height="85dp"
+            android:layout_height="70dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="68dp"
             android:layout_weight="1"
@@ -77,9 +88,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.514"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.854" />
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
             android:layout_height="290dp"
             android:layout_marginTop="8dp"
@@ -100,14 +114,14 @@
                 android:id="@+id/progressBar"
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="46dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="120dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="40dp"
                 android:layout_marginBottom="8dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
                 android:minWidth="900dp"
                 android:progress="25"
                 android:rotation="270" />
