--- a/AppHytracked/app/src/main/res/layout/fragment_tab_three.xml
+++ b/AppHytracked/app/src/main/res/layout/fragment_tab_three.xml
@@ -14,6 +14,19 @@
         android:layout_height="match_parent"
         android:layout_weight="1">
 
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/syncbutton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SYNC"
+                tools:layout_editor_absoluteX="148dp"
+                tools:layout_editor_absoluteY="447dp" />
+        </android.support.constraint.ConstraintLayout>
+
         <TextView
             android:id="@+id/weight"
             android:layout_width="wrap_content"
@@ -97,9 +110,12 @@
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="40sp"
+            android:onClick="askForSync"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="OnClick" />
+
     </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
